--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "nanoid": "^3.3.8",
     "pg": "^8.18.0",
-    "pg-hstore": "^2.3.4",
-    "pg-promise": "^12.6.1",
-    "sequelize": "^6.37.7"
+    "pg-promise": "^12.6.1"
   },
   "devDependencies": {
     "node-pg-migrate": "^8.0.4",
